--- a/aboutme.html
+++ b/aboutme.html
@@ -40,9 +40,9 @@
 
 		Me gusta jugar fútbol,tambien los videojuegos mas los de acción ya que juego con mis amigos y personas de otros paises, me gusta ver Dragon ball, lo que me gista mas es hacer ejercicio porque ahi doy lo mejor de mi.</font> </p></strong></font>
 
-		        	 <center><a href="file:///C:/Users/Bairo/OneDrive/Escritorio/fotocarlos.jpeg"> 
+		        	 <center><a href="fotocarlos.jprg"> 
 		              <img 
-		    		  src="file:///C:/Users/Bairo/OneDrive/Escritorio/fotocarlos.jpeg" 
+		    		  src="fotocarlos.jpeg" 
 		    		  width="10%"
 		 						 />
 		 		</a></center>
@@ -50,9 +50,9 @@
 
 		 <font face="Comic Sans MS,Courier New,Verdana"><strong><p aling="left"><font size="4">Tengo 18 años, estoy sacando mi último año de diversificado , Perito en Administración de Empresas en el instituto IPC , soy una persona carismática con un buen sentido del humor , también le veo lo positivo a cualquier cosa ya sea problema o sincustancia , me gusta mucho hacer ejercicio , también soy una persona muy respetuosa y un poco tímida , me desespero fácilmente. Soy una mujer que se esfuerza para conseguir las metas que le propongo me gusta mucho ser diciplina conmigo misma es algo que me ayuda a salir adelante ya que siempre me pongo retos es algo que me gusta ,me demuestra hasta donde puedo llegar con mis capacidades. Mi comida favorita es la lasaña , también soy una persona que siempre trata de ayudar a las demás personas , trato de tener presente el valor de la humildad . </font></strong></p></font>
 
-             <center><a href="progra/fotocarlos.JPEG"> 
+             <center><a href="fotokeila.jpeg"> 
 		              <img 
-		    		  src="progra/fotocarlos.JPEG" 
+		    		  src="fotokeila.jpeg" 
 		    		  width="12%"
 		 						 />
 		 		</a></center>
