--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
 
 		Me gusta jugar fútbol,tambien los videojuegos mas los de acción ya que juego con mis amigos y personas de otros paises, me gusta ver Dragon ball, lo que me gista mas es hacer ejercicio porque ahi doy lo mejor de mi.</font> </p></strong></font>
 
-		        	 <center><a href="fotocarlos.jprg"> 
+		        	 <center><a href="progra/fotocarlos.jprg"> 
 		              <img 
 		    		  src="fotocarlos.jpeg" 
 		    		  width="10%"
